[gd_scene load_steps=6 format=2]

[ext_resource path="res://1. GFX/Misc/TripleShot.png" type="Texture" id=1]
[ext_resource path="res://1. GFX/Misc/Junk.png" type="Texture" id=2]
[ext_resource path="res://6. GUI/ActionBar.gd" type="Script" id=3]
[ext_resource path="res://1. GFX/Misc/ArmorUp.png" type="Texture" id=4]
[ext_resource path="res://1. GFX/Misc/ShotSpeed.png" type="Texture" id=5]

[node name="ActionBar" type="Control" groups=[
"actionBar",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 383.392
margin_top = 253.682
margin_right = 383.392
margin_bottom = 253.682
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = -100.0
margin_top = -41.0
margin_right = 100.0
margin_bottom = 41.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 64.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 14.0
text = "1"
align = 1

[node name="TextureProgress1" type="TextureProgress" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( -155.308, 16.1418 )
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
fill_mode = 5
tint_progress = Color( 0.352941, 0.352941, 0.352941, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/TextureProgress1"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 36.0
margin_bottom = -2.0
grow_vertical = 0
rect_scale = Vector2( 0.7, 0.7 )
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/TextureProgress1/HBoxContainer"]
margin_left = 20.0
margin_right = 28.0
margin_bottom = 14.0
text = "5"
align = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/TextureProgress1/HBoxContainer"]
visible = false
margin_left = 12.0
margin_right = 44.0
margin_bottom = 32.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 64.0
margin_bottom = 14.0
text = "2"
align = 1

[node name="TextureProgress2" type="TextureProgress" parent="HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( -155.308, 16.1418 )
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
fill_mode = 5
tint_progress = Color( 0.352941, 0.352941, 0.352941, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/TextureProgress2"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 36.0
margin_bottom = -2.0
grow_vertical = 0
rect_scale = Vector2( 0.7, 0.7 )
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/TextureProgress2/HBoxContainer"]
margin_left = 12.0
margin_right = 28.0
margin_bottom = 14.0
text = "10"
align = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer2/TextureProgress2/HBoxContainer"]
visible = false
margin_left = 20.0
margin_right = 52.0
margin_bottom = 32.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer3"]
margin_right = 64.0
margin_bottom = 14.0
text = "3"
align = 1

[node name="TextureProgress3" type="TextureProgress" parent="HBoxContainer/VBoxContainer3"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 82.0
value = 100.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
fill_mode = 5
tint_progress = Color( 0.352941, 0.352941, 0.352941, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer3/TextureProgress3"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 36.0
margin_bottom = -2.0
grow_vertical = 0
rect_scale = Vector2( 0.7, 0.7 )
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer3/TextureProgress3/HBoxContainer"]
margin_left = 12.0
margin_right = 28.0
margin_bottom = 14.0
text = "15"
align = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer3/TextureProgress3/HBoxContainer"]
visible = false
margin_left = 20.0
margin_right = 52.0
margin_bottom = 32.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="upgradeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="upgradeTimer" to="." method="_on_upgradeTimer_timeout"]
